# MolSpin

./: .gitignore  5_degrees_logfile.txt  CMakeCache.txt  CMakeLists.txt  Dockerfile  GaussianTensor.txt  LICENSE.txt  Makefile  MolSpinControlScript.py  README.md  VariableControl.csv  cmake_install.cmake  gaussian_noise.py  gnuplot_plot.gnuplot  hf1.mst  main.cpp  makefile  output.txt  paul.msd  reconstructed_hyperfine.mst  script_aktuell_juni2024.msd  test  test.cpp  testetst.txt  tests  zeeman_bb.mst  zeeman_bb2.mst  zeeman_ou.mst
.github/workflows/: c-cpp.yml  docker-build-env.yml  docker-build.yml  docker-molspin.yml
Example/: 25_degrees.msd  35_degrees.msd  45_degrees_cidnp.msd  5_degrees.msd  5_degrees1.msd  5_degreesFHB1WHB1.msd  5_degreesFHB1WHB1_redfield_rp.msd  5_degreesFHB1WHB1_static.msd  example_1.msd  example_1_standard_test.msd  example_2.msd  example_3.msd  example_4.msd  example_cidnp.msd  example_cidnp_1.msd  example_cidnp_SYW_1.msd  example_cidnp_cryptochrome.msd  example_cidnp_cryptochrome_1.msd  example_multi_system.msd  input.msd  input9.msd  old_example_3.msd  rp.msd  rp_with_subsystems.msd
Example/co2_formation/: co2_formation.msd
Example/magnetoreception/quantumyield_md_data/: example_2.msd  example_2_static.msd
Example/magnetoreception/quantumyield_standard/: example_2.msd  example_2_static.msd
Example/magnetoreception/timeevolution/: example_2.msd  example_2_1_ns.msd  example_2_500_ps.msd  example_2_50_ps.msd  example_2_5_ps.msd
Example/performance_redfield/: example_1.msd  example_2.msd  example_3.msd  example_4.msd  example_5.msd
Example/spectroscopy/: Spectroscopy_ciss_example.msd  Spectroscopy_example.msd  Spectroscopy_example_HS_direct.msd  Spectroscopy_example_nakajima_zwanzig.msd
Example/standard_examples/: FieldBBNoise.mst  GaussianNoise.mst  Monochromatic.mst  Monoexample_forRae.msd  OUGeneral.mst  OUSpring.mst  OUexample_forRae.msd  dist.txt  example.msd  example_BBfield.msd  example_BBfield_mst.msd  example_BBtensor_test.msd  example_gaussian_test.msd  example_gaussian_test_mst.msd  example_monochromatic_dist_test.msd  example_monochromatic_test copy.msd  example_monochromatic_test.msd  example_monochromatic_test_mst.msd  example_ougeneral_dist_test.msd  example_ougeneral_test.msd  example_ougeneral_test_mst.msd  example_ouspring_test.msd  example_ouspring_test_mst.msd  example_sinmat.msd  feb12_test.msd  tdRae_test.msd  tdexample_forRae.msd  time_dependent_example.msd
Example/test_non_symmetric_matrices/: example_cidnp_paper_values_31.msd
Example/test_trajectory/: FAD.axes.mst  complex_time_dependency.msd  magneticfield.mst
MSDParser/: FileReader.cpp  FileReader.h  MSDParser.cpp  MSDParser.h  MSDParserDefines.h  MSDParserfwd.h  ObjectParser.cpp  ObjectParser.h
RunSection/: Action.cpp  Action.h  ActionTarget.h  BasicTask.cpp  BasicTask.h  OutputHandler.cpp  OutputHandler.h  RunSection.cpp  RunSection.h  RunSectionDefines.h  RunSection_CreateTask.cpp  RunSectionfwd.h  Settings.cpp  Settings.h  Utility.cpp  Utility.h
RunSection/Actions/: ActionAddScalar.cpp  ActionAddScalar.h  ActionAddVector.cpp  ActionAddVector.h  ActionFibonacciSphere.cpp  ActionFibonacciSphere.h  ActionLogSpace.cpp  ActionLogSpace.h  ActionMultiplyScalar.cpp  ActionMultiplyScalar.h  ActionRotateVector.cpp  ActionRotateVector.h  ActionScaleVector.cpp  ActionScaleVector.h
RunSection/Tasks/: TaskActionSpectrumHistogram.cpp  TaskActionSpectrumHistogram.h  TaskActionSpectrumHistogramRPOnlyDec.cpp  TaskActionSpectrumHistogramRPOnlyDec.h  TaskDynamicHSDirectSpectra.cpp  TaskDynamicHSDirectSpectra.h  TaskDynamicHSDirectTimeEvo.cpp  TaskDynamicHSDirectTimeEvo.h  TaskDynamicHSDirectYields.cpp  TaskDynamicHSDirectYields.h  TaskDynamicHSStochTimeEvo.cpp  TaskDynamicHSStochTimeEvo.h  TaskDynamicHSStochYields.cpp  TaskDynamicHSStochYields.h  TaskDynamicHSTimeEvo.cpp  TaskDynamicHSTimeEvo.h  TaskGammaCompute.cpp  TaskGammaCompute.h  TaskHamiltonianEigenvalues.cpp  TaskHamiltonianEigenvalues.h  TaskMultiDynamicHSTimeEvo.cpp  TaskMultiDynamicHSTimeEvo.h  TaskMultiRadicalPairSSTimeEvo.cpp  TaskMultiRadicalPairSSTimeEvo.h  TaskMultiStaticSSNakajimaZwanzigTimeEvo.cpp  TaskMultiStaticSSNakajimaZwanzigTimeEvo.h  TaskMultiStaticSSRedfieldTimeEvo.cpp  TaskMultiStaticSSRedfieldTimeEvo.h  TaskMultiStaticSSTimeEvo.cpp  TaskMultiStaticSSTimeEvo.h  TaskMultiStaticSSTimeEvoSpectra.cpp  TaskMultiStaticSSTimeEvoSpectra.h  TaskPeriodicHSTimeEvo.cpp  TaskPeriodicHSTimeEvo.h  TaskPeriodicSSTimeEvo.cpp  TaskPeriodicSSTimeEvo.h  TaskStaticHSDirectSpectra.cpp  TaskStaticHSDirectSpectra.h  TaskStaticHSDirectTimeEvo.cpp  TaskStaticHSDirectTimeEvo.h  (+48 more)
SpinAPI/: Function.cpp  Function.h  Interaction.cpp  Interaction.h  Operator.cpp  Operator.h  Pulse.cpp  Pulse.h  Spin.cpp  Spin.h  SpinAPIDefines.h  SpinAPIfwd.h  SpinSpace.cpp  SpinSpace.h  SpinSystem.cpp  SpinSystem.h  StandardOutput.cpp  StandardOutput.h  State.cpp  State.h  SubSystem.cpp  SubSystem.h  Tensor.cpp  Tensor.h  Trajectory.cpp  Trajectory.h  Transition.cpp  Transition.h
SpinAPI/SpinSpace/: SpinSpace_hamiltonians.cpp  SpinSpace_management.cpp  SpinSpace_operators.cpp  SpinSpace_pulses.cpp  SpinSpace_relaxation.cpp  SpinSpace_states.cpp  SpinSpace_transitions.cpp
Tests/: Makefile  assertfunctions.cpp  testmain.cpp  tests_TaskStaticHSSymmetricDecay.cpp  tests_TaskStaticRPOnlyHSSymDec.cpp  tests_TaskStaticSS.cpp  tests_TaskStaticSSSpectra.cpp  tests_actions.cpp  tests_msdparser.cpp  tests_spinapi.cpp
docker-build/: Dockerfile
msd-files/: CISS-HoreLau.msd  CISS-HoreLauTest1.msd  CISS-HoreLauTest2.msd  CISS_System.msd  CISS_System_ToyModel.msd  block-redfield.msd
msd-files/CISS-HoreLau/: CISS-HoreLau-0.msd  CISS-HoreLau-1.msd  CISS-HoreLau-10.msd  CISS-HoreLau-2.msd  CISS-HoreLau-3.msd  CISS-HoreLau-4.msd  CISS-HoreLau-5.msd  CISS-HoreLau-6.msd  CISS-HoreLau-7.msd  CISS-HoreLau-8.msd  CISS-HoreLau-9.msd
